2009-03-15 Richard Dale  <richard.j.dale@gmail.com>
* Added 'rbwtapi' a command line introspection tool for the Wt::Ruby api.
Example usage of rbwtapi:

$ rbwtapi --help
rbwtapi - a Wt::Ruby introspection tool

usage: rbwtapi [-h] [-v] [-p] [-m <re> [-i]] [-r <extension> ...] [<class>]

options:
    -m <re> : find all functions matching regular expression/keyword <re>
    -i : together with -m, performs a case insensitive search
    -p : also display inherited methods for <class>
    -s | show method names with ruby types
    -r : require a Wt::Ruby extension
    -v : print Wt::Ruby and Wt versions
    -h : print this help message

$ rbwtapi -m objectName Wt::WObject
std::string Wt::WObject::objectName() const

$ rbwtapi -m objectName -s Wt::WObject
String Wt::WObject#objectName

* Fixed bug in unmapPointer() which meant that no pointers ever got unmapped,
oops! This meant that a C++ instance created via a call to Ruby new() could be
deleted, and the Ruby side wouldn't know about it. When the address was
reused for another C++ instance, the Wt::Ruby runtime would still think it was
associated with the old instance, causing seg faults and/or strange behaviour.
* Improved the garbage collection debug logging option so that it logs the
Ruby VALUE and not the address of the VALUE consistently.
* Made the smoke library code generation work with Wt 2.99 and the runtime 
compile and work with it.
* Updated the INSTALL instructions so they say that Wt 2.2.3 or Wt 2.99 can be
used, and also Ruby 1.8.x or Ruby 1.9.1
* Rename the examples directory 'examples_2_0' and create a new directory
'examples_3_0' for any examples converted to use Wt 2.99/3.x
* A problem has been found with QtRuby when it is run with Ruby 1.9.1
and GC.stess is true - the same problem will occur with Wt::Ruby.
In the smokeruby_mark() function called during garbage collection, 
any virtual methods which are called on the instances being checked 