@@ -1389,12 +1389,15 @@ WTRUBY_EXPORT TypeHandler Wt_handlers[] = {
     { "VerticalAlignment", marshall_StaticConstEnum },
     { "Wt::EventSignal<Wt::WKeyEvent>", marshall_EventSignalWKeyEvent },
     { "Wt::EventSignal<Wt::WKeyEvent>&", marshall_EventSignalWKeyEvent },
+    { "Wt::EventSignal<Wt::WKeyEvent>*", marshall_EventSignalWKeyEvent },
     { "Wt::EventSignal<Wt::WMouseEvent>", marshall_EventSignalWMouseEvent },
     { "Wt::EventSignal<Wt::WMouseEvent>&", marshall_EventSignalWMouseEvent },
+    { "Wt::EventSignal<Wt::WMouseEvent>*", marshall_EventSignalWMouseEvent },
     { "Wt::EventSignal<Wt::WResponseEvent>", marshall_EventSignalWResponseEvent },
     { "Wt::EventSignal<Wt::WResponseEvent>&", marshall_EventSignalWResponseEvent },
     { "Wt::EventSignal<void>", marshall_EventSignalVoid },
     { "Wt::EventSignal<void>&", marshall_EventSignalVoid },
+    { "Wt::EventSignal<void>*", marshall_EventSignalVoid },
     { "Wt::JSignal<>", marshall_JSignal },
     { "Wt::JSignal<>&", marshall_JSignal },
     { "Wt::JSignal<bool>", marshall_JSignalBoolean },
@@ -1408,8 +1411,10 @@ WTRUBY_EXPORT TypeHandler Wt_handlers[] = {
     { "Wt::Signal<Wt::WString>",  marshall_SignalWString }, 
     { "Wt::Signal<Wt::WWidget*>", marshall_SignalWWidget },
     { "Wt::Signal<bool>", marshall_SignalBoolean },
+    { "Wt::Signal<bool>&", marshall_SignalBoolean },
     { "Wt::Signal<int,int>",  marshall_SignalIntInt },
     { "Wt::Signal<int>", marshall_SignalInt },
+    { "Wt::Signal<int>&", marshall_SignalInt },
     { "Wt::Signal<long long,long long>",  marshall_SignalLonglongLonglong },
     { "Wt::Signal<std::string,std::string>",  marshall_SignalStringString },
     { "Wt::Signal<std::string>",  marshall_SignalString },
