@@ -1,3 +1,7 @@
+2009-03-18 Richard Dale  <richard.j.dale@gmail.com>
+* Some signal types are references in Wt 3.0 when they were just values in 
+Wt 2.x, so add the new types to the marshallers table
+
 2009-03-15 Richard Dale  <richard.j.dale@gmail.com>
 * Added 'rbwtapi' a command line introspection tool for the Wt::Ruby api.
 Example usage of rbwtapi:
